[package]
name = "vino-bc"
version = "0.1.0"
authors = ["Matthew K <mattjk@outlook.com>"]
edition = "2018"

[dependencies]
sha2 = "0.9.3"
chrono = "0.4.0"
ring = "0.16.20"
rand = "0.7.0"
libp2p = "0.35.1"
futures = "0.3.12"
async-std = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
[dependencies.ed25519-dalek]
version = "1"
features = ["nightly"]
